# rusvid_scripting_test

./: .gitignore  Cargo.toml  README.md  example_script.rhai
src/: effect.rs  main.rs  pixel.rs
