[package]
name = "scripting_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rusvid_effect = { path = "../rusvid/crates/effect" }
rusvid_core = { git = "https://github.com/LetsMelon/rusvid.git", revision = "5f7d56b" }
rhai = "1.12.0"
itertools = "0.10.5"
