[package]
name = "scripting_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
itertools = "0.10.5"
rand = "0.8.5"
rhai = "1.12.0"
rusvid_core = { git = "https://github.com/LetsMelon/rusvid.git", revision = "5f7d56b" }
rusvid_effect = { git = "https://github.com/LetsMelon/rusvid.git", revision = "5f7d56b" }

[profile.dev.package.rhai]
opt-level = 3

# enables lto, only 1.06 times faster than without
# [profile.release]
# lto = "fat"
